--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Hello World</title>
   </head>
   <body>
-    <h4>Hello World</
+    <h4>Hello World</h4>
 
     	princess.wayfarerx.net
   </body>
