--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
   <head>
-    <title>Hello World</title>
+    <title>Princess Wayfarer</title>
   </head>
   <body>
-    <h4>Hello World</h4>
+    <h1>Princess Wayfarer</h1>
 
-    	princess.wayfarerx.net
+    <h2>Art<h2>
+    
+    <h2>Food</h2>
+
+    <h2>Music</h2>
   </body>
 </html>
