--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
     <h2>Art<h2>
     <img src="images/playdoh.JPG">
-    
     <h2>Food</h2>
+    <img src="images/lunch.JPG">
+
+
+
+  
 
     <h2>Music</h2>
 
