--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Food</h2>
     <img src="images/lunch.JPG">
     <img src="images/yum.JPG">
-    <img src="images/dinner.JPG">
+    <img src="images/Dinner.JPG">
 
   
 
