--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="images/lunch.JPG">
     <img src="images/yum.JPG">
     <img src="images/Dinner.JPG">
-
+    <img src="imagesfood.JPG">
   
 
     <h2>Music</h2>
