--- a/faries.html
+++ b/faries.html
@@ -1,19 +1,10 @@
 <html>
   <head>
     <title>Princess Wayfarer</title>
-    <style type="text/css">
-      
-   body {
-
-
-    background-color: pink;
-   }
-
-
-    </style>
   </head>
   <body>
     <h1>Princess Wayfarer</h1>
+
     <h2>Art<h2>
     <img src="images/playdoh.JPG">
     <h2>Food</h2>
@@ -21,7 +12,13 @@
     <img src="images/yum.JPG">
     <img src="images/Dinner.JPG">
     <img src="images/food.JPG">
+  
+
     <h2>Music</h2>
-   
-     </body>
+
+    <h2>Life</h2>
+   <img src="images/Doll.JPG">
+
+
+  </body>
 </html>
