--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <h1>Princess Wayfarer</h1>
     <h2>Art<h2>
+    This is my art. I like to make art every day and sometimes at night too. Do you like my art? My dad thinks it's cool.
     <img src="images/playdoh.JPG">
     <h2>Food</h2>
     <img src="images/lunch.JPG">
