--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <body>
     <h1>Princess Wayfarer</h1>
     <h2>Art<h2>
-    This is my art. I like to make art every day and sometimes at night too. Do you like my art? My dad thinks it's cool.
+    <span>This is my art.</span>
+    <span>I like to make art every day and sometimes at night too.</span>
+    <span>Do you like my art?</span>
+    <span>My dad thinks it's cool.</span>
     <img src="images/playdoh.JPG">
     <h2>Food</h2>
     <img src="images/lunch.JPG">
