--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>Princess Wayfarer</h1>
-    <h2>Art<h2>
+    <h2>Art</h2>
     <span>This is my art.</span>
     <span>I like to make art every day and sometimes at night too.</span>
     <span>Do you like my art?</span>
