--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Princess Wayfarer</h1>
     <h2>Art</h2>
     <span>This is my art.</span>
-    <span>I like to make art every day and sometimes at night too.</span>
+    <span style="display: block;">I like to make art every day and sometimes at night too.</span>
     <span>Do you like my art?</span>
     <span>My dad thinks it's cool.</span>
     <img src="images/playdoh.JPG">
