--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <span style="display: block;">I like to make art every day and sometimes at night too.</span>
     <span>Do you like my art?</span>
     <span>My dad thinks it's cool.</span>
-    <img src="images/playdoh.JPG">
+    <img src="images/playdoh.JPG"> Check out my star!
     <h2>Food</h2>
     <img src="images/lunch.JPG">
     <img src="images/yum.JPG">
