--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
    body {
 
 
-    background-color: pink;
+    background: rgb(147,1,245);
+background: linear-gradient(90deg, rgba(147,1,245,0.923406862745098) 0%, rgba(242,6,231,0.8309698879551821) 43%, rgba(249,147,3,0.8365721288515406) 71%);
    }
 
 
